[package]
name = "greenring"
version = "0.1.0"
authors = ["James Uther <jbu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = { version = "0.8.3" }